@@ -104,15 +104,15 @@
 #define __DW4(LBN) 	  ((LBN) - 96)
 
 /* checks that the autogenerated headers our consistent with our model */
-#define WIDTHCHCK(a, b)  BUG_ON((a) != (b))
+#define WIDTHCHCK(a, b)  EF_VI_BUG_ON((a) != (b))
 #define RANGECHCK(v, WIDTH) \
-                BUG_ON(((uint64_t)(v) & ~(__EFVI_MASK64((WIDTH)))) != 0)
+                EF_VI_BUG_ON(((uint64_t)(v) & ~(__EFVI_MASK64((WIDTH)))) != 0)
 
 /* fields within the first dword */
-#define DWCHCK(LBN, WIDTH) BUG_ON(((LBN) < 0) || (((LBN)+(WIDTH)) > 32))
+#define DWCHCK(LBN, WIDTH) EF_VI_BUG_ON(((LBN) < 0) || (((LBN)+(WIDTH)) > 32))
 
 /* fields which span the first and second dwords */
-#define LWCHK(LBN, WIDTH)  BUG_ON(WIDTH < __LW(LBN))
+#define LWCHK(LBN, WIDTH)  EF_VI_BUG_ON(WIDTH < __LW(LBN))
 
 
 /*----------------------------------------------------------------------------
